--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  device_apps: ^2.2.0
   flutter_riverpod: ^2.5.1
   one_clock: ^2.0.0
+  installed_apps: ^1.5.0
 
 dev_dependencies:
   flutter_test:
