Trying out app_usage package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   installed_apps: ^1.5.0
   provider: ^6.1.2
   app_install_events: ^0.0.2
+  app_usage: ^3.0.1
 
 dev_dependencies:
   flutter_test:
