--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.1.2
   app_install_events: ^0.0.2
   app_usage: ^3.0.1
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
