--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   app_install_events: ^0.0.2
   app_usage: ^3.0.1
   url_launcher: ^6.2.6
+  android_intent_plus: ^4.0.3
+  platform: ^3.1.3
 
 dev_dependencies:
   flutter_test:
